--- a/src/config/config.ini
+++ b/src/config/config.ini
@@ -1,4 +1,7 @@
 [server]
+pid = go-server.pid
+
+; 退出当前并发总数
 qos = 5
 
 [mysql]
@@ -10,7 +13,11 @@ default.dbname  = test
 default.charset = utf8
 
 [redis]
-default.host  = 193.112.101.85
-default.port  = 6379
-default.auth  = a2f6d985382bd42294db5358f1b2affa
-default.index = 12
+default.host  = 
+default.port  = 
+default.auth  = 
+default.index = 
+
+[sms]
+sms.driver = luosimao
+sms.key    = xxx
