--- a/src/config/config.ini
+++ b/src/config/config.ini
@@ -2,7 +2,7 @@
 pid = go-server.pid
 
 ; 退出当前并发总数
-qos = 5
+qos = 100
 
 [mysql]
 default.host    = 127.0.0.1
@@ -13,11 +13,11 @@ default.dbname  = test
 default.charset = utf8
 
 [redis]
-default.host  = 
-default.port  = 
-default.auth  = 
-default.index = 
+default.host  = 193.112.101.85
+default.port  = 6379
+default.auth  = a2f6d985382bd42294db5358f1b2affa
+default.index = 12
 
 [sms]
 sms.driver = luosimao
-sms.key    = xxx
+sms.key    = c948f8c76b5c3a27893dc627b04e0b0f
