--- a/src/config/config.ini
+++ b/src/config/config.ini
@@ -15,9 +15,9 @@ default.charset = utf8
 [redis]
 default.host  = 193.112.101.85
 default.port  = 6379
-default.auth  = a2f6d985382bd42294db5358f1b2affa
+default.auth  = xxxx
 default.index = 12
 
 [sms]
 sms.driver = luosimao
-sms.key    = c948f8c76b5c3a27893dc627b04e0b0f
+sms.key    = xxx
