--- a/src/config/config.ini
+++ b/src/config/config.ini
@@ -13,10 +13,10 @@ default.dbname  = test
 default.charset = utf8
 
 [redis]
-default.host  = 193.112.101.85
+default.host  = 127.0.0.1
 default.port  = 6379
-default.auth  = xxxx
-default.index = 12
+default.auth  = 
+default.index = 1
 
 [sms]
 sms.driver = luosimao
